# CMake

./: Makefile
lib/: CMakeLists.txt  Makefile
lib/include/: Calculator.h
lib/src/: Calculator.cpp
sdk/cmake/: FindCalculator.cmake
sdk/include/: ICalculator.h
